--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <html>
     <head></head>
     <body>
-        <p>Hello, World!</p>
-        <p>My name is Anel</p> <!-- Change NAME to your name! -->
+        <h1>Hello I am Anel</h1>
+        <h3>pronouns: she/her</h3> 
+        <p style="font-family:courier;">I hope to learn how to make a nice looking website to use as a portfolio.
+        <p>I am in my fourth year at CU Boulder studying Media Production and double minoring in CTD and Leadership Studies.
+            Documentary media is where my heart lies, I hope to share people's stories and provide new perspectives of life 
+        for others. </p>
+        <a href=img/me.jpg>TEXT HERE</a> 
+
+        <h3>My favorite video at the moment:</h3>
+        <a href=>TEXT HERE</a> 
     </body>
 </html>
