--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <p style="font-family:courier new;">I am in my fourth year at CU Boulder studying Media Production and double minoring in CTD and Leadership Studies.
             Documentary media is where my heart lies, I hope to share people's stories and provide new perspectives of life 
         for others. </p>
-        <a href="./img/me.jpg">what I look like</a> 
+        <a href="./img/me.jpeg">what I look like</a> 
 
         <h3>My favorite video at the moment:</h3>
         <a href= https://www.youtube.com/watch?v=xuCn8ux2gbs&t=70s>all you need to know</a> 
