--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
-<html>
-    <head></head>
-    <body>
-        <h1 style="font-family:Helvetica;">Hello I am Anel</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1 style="font-family:Helvetica;">Hello I am Anel</h1>
         <h3 style="font-family:Helvetica;">pronouns: she/her</h3> 
         <p style="font-family:courier new;">I hope to learn how to make a nice looking website to use as a portfolio.
         <p style="font-family:courier new;">I am in my fourth year at CU Boulder studying Media Production and double minoring in CTD and Leadership Studies.
             Documentary media is where my heart lies, I hope to share people's stories and provide new perspectives of life 
         for others. </p>
-        <a href="./img/me.jpeg">what I look like</a> 
+        <a href="/img/me.jpeg">what I look like</a> 
 
         <h3>My favorite video at the moment:</h3>
         <a href= https://www.youtube.com/watch?v=xuCn8ux2gbs&t=70s>all you need to know</a> 
-    </body>
+</body>
 </html>
