--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <title>Anel's Site</title>
 </head>
 <body>
-    <h1 style="font-family:Helvetica;">Hello I am Anel</h1>
+    <h1 style="font-family:Helvetica;">Hello I am Anel and this is my Site</h1>
     <h3 style="font-family:Helvetica;">pronouns: she/her</h3> 
-    <p style="font-family:courier new;">I hope to learn how to make a nice looking website to use as a portfolio.
-    <p style="font-family:courier new;">I am in my fourth year at CU Boulder studying Media Production and double minoring in CTD and Leadership Studies.
+    <p style="font-family:Helvetica;">I hope to learn how to make a nice looking website to use as a portfolio.
+    <p style="font-family:Helvetica;">I am in my fourth year at CU Boulder studying Media Production and double minoring in CTD and Leadership Studies.
             Documentary media is where my heart lies, I hope to share people's stories and provide new perspectives of life 
         for others. </p>
-    <img src="/img/me.jpeg" width="1512" height="2016">
+    <img src="/img/me.jpeg" width="189" height="252">
 
-    <h3>My favorite video at the moment:</h3>
+    <h3 style="font-family:Helvetica;"> **My favorite video _at the moment_** :</h3>
     <a href= https://www.youtube.com/watch?v=xuCn8ux2gbs&t=70s>all you need to know</a> 
 </body>
 </html>
