--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <h1 style="font-family:Helvetica;">Hello I am Anel and this is my Site</h1>
     <h3 style="font-family:Helvetica;">pronouns: she/her</h3> 
-    <p style="font-family:Helvetica;">I hope to learn how to make a nice looking website to use as a portfolio.
     <p style="font-family:Helvetica;">I am in my fourth year at CU Boulder studying Media Production and double minoring in CTD and Leadership Studies.
             Documentary media is where my heart lies, I hope to share people's stories and provide new perspectives of life 
         for others. </p>
-    <img src="/img/me.jpeg" width="189" height="252">
+    <sub style="font-family:Helvetica;">I hope to learn how to make a nice looking website to use as a portfolio.</sub>
+    <img src="/img/me.jpeg" width="378" height="504">
 
-    <h3 style="font-family:Helvetica;"> **My favorite video _at the moment_** :</h3>
+    <h3 style="font-family:Helvetica;"> My favorite video at the moment:</h3>
     <a href= https://www.youtube.com/watch?v=xuCn8ux2gbs&t=70s>all you need to know</a> 
 </body>
 </html>
