--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <p style="font-family:Helvetica;">I am in my fourth year at CU Boulder studying Media Production and double minoring in CTD and Leadership Studies.
             Documentary media is where my heart lies, I hope to share people's stories and provide new perspectives of life 
         for others. </p>
-    <sub style="font-family:Helvetica;">I hope to learn how to make a nice looking website to use as a portfolio.</sub>
+    <sub style="font-family:Helvetica;">I also hope to learn how to make a nicer looking website to use as a portfolio through this course</sub>
+    
     <img src="/img/me.jpeg" width="378" height="504">
 
-    <h3 style="font-family:Helvetica;"> My favorite video at the moment:</h3>
+    <h4 style="font-family:Copperplate;"> My favorite video at the moment:</h4>
     <a href= https://www.youtube.com/watch?v=xuCn8ux2gbs&t=70s>all you need to know</a> 
 </body>
 </html>
