--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     
     <img src="/img/me.jpeg" width="378" height="504">
 
-    <h4 style="font-family:Copperplate;"> My favorite video at the moment:</h4>
-    <a href= https://www.youtube.com/watch?v=xuCn8ux2gbs&t=70s>all you need to know</a> 
+    <h4 style="font-family:Copperplate;"> My favorite video at the moment:</h4> <a href= https://www.youtube.com/watch?v=xuCn8ux2gbs&t=70s>all you need to know</a> 
 </body>
 </html>
