--- a/ica3/rawtext.html
+++ b/ica3/rawtext.html
@@ -5,8 +5,7 @@
         <link rel="stylesheet" href="css.css">
     </head>
     <body>
-        <address class=".sender-column"> 
-        Eleanor Gaye
+        <address class=".sender-column"> Eleanor Gaye
         Awesome Science faculty
         University of Awesome
         Bobtown, CA 99999,
