--- a/assignments/assignment3.html
+++ b/assignments/assignment3.html
@@ -8,7 +8,15 @@
 </head>
 <body>
 
-    <header>Cats</header>
+    <header>
+    <h1>Cat</h1>
+    </header>
+
+    <h2> From Anel Villalobos </h2>
+
+    <img src="../img/cat1.jpeg" width="378" height="504">
+
+
 
 
     
