--- a/assignments/assignment3.html
+++ b/assignments/assignment3.html
@@ -24,6 +24,20 @@
 The cat is similar in anatomy to the other felid species: it has a strong flexible body, quick reflexes, sharp teeth, and retractable claws adapted to killing small prey. Its night vision and sense of smell are well developed. Cat communication includes vocalizations like meowing, purring, trilling, hissing, growling, and grunting as well as cat-specific body language. A predator that is most active at dawn and dusk (crepuscular), the cat is a solitary hunter but a social species. It can hear sounds too faint or too high in frequency for human ears, such as those made by mice and other small mammals. Cats also secrete and perceive pheromones.
     </p>
 
+    <h2> Contents </h2>
+
+    <ol>
+        <li> Etymology, Naming, & Taxonomy </li>
+        <li> Evolution </li>
+        <li> Characteristics </li>
+        <li> Senses </li>
+    </ol>
+
+    
+
+
+
+
 
     
 
