--- a/assignments/assignment3.html
+++ b/assignments/assignment3.html
@@ -25,6 +25,7 @@ The cat is similar in anatomy to the other felid species: it has a strong flexib
     </p>
 
     <h2> Contents </h2>
+    <hr></hr>
 
     <ol>
         <li> Etymology, Naming, & Taxonomy </li>
@@ -33,9 +34,21 @@ The cat is similar in anatomy to the other felid species: it has a strong flexib
         <li> Senses </li>
     </ol>
 
-    
+    <h2>Etymology, Naming, & Taxonomy</h2>
+    <hr></hr>
 
+    <p>
+        The origin of the English word cat, Old English catt, is thought to be the Late Latin word cattus, which was first used at the beginning of the 6th century.[21] It was suggested that the word 'cattus' is derived from an Egyptian precursor of Coptic ϣⲁⲩ šau, "tomcat", or its feminine form suffixed with -t.[22] The Late Latin word may be derived from another Afro-Asiatic[23] or Nilo-Saharan language. The Nubian word kaddîska "wildcat" and Nobiin kadīs are possible sources or cognates.[24] The Nubian word may be a loan from Arabic قَطّ‎ qaṭṭ ~ قِطّ qiṭṭ. It is "equally likely that the forms might derive from an ancient Germanic word, imported into Latin and thence to Greek and to Syriac and Arabic".[25] The word may be derived from Germanic and Northern European languages, and ultimately be borrowed from Uralic, cf. Northern Sami gáđfi, "female stoat", and Hungarian hölgy, "lady, female stoat"; from Proto-Uralic *käďwä, "female (of a furred animal)".[26]
 
+        The English puss, extended as pussy and pussycat, is attested from the 16th century and may have been introduced from Dutch poes or from Low German puuskatte, related to Swedish kattepus, or Norwegian pus, pusekatt. Similar forms exist in Lithuanian puižė and Irish puisín or puiscín. The etymology of this word is unknown, but it may have simply arisen from a sound used to attract a cat.[27][28]
+        
+        A male cat is called a tom or tomcat[29] (or a gib,[30] if neutered). An unspayed female is called a queen,[31] (or a molly,[32] if spayed), especially in a cat-breeding context. A juvenile cat is referred to as a kitten. In Early Modern English, the word kitten was interchangeable with the now-obsolete word catling.[33] A group of cats can be referred to as a clowder or a glaring.[34]
+    </p>
+    <p>
+        The scientific name Felis catus was proposed by Carl Linnaeus in 1758 for a domestic cat.[1][2] Felis catus domesticus was proposed by Johann Christian Polycarp Erxleben in 1777.[3] Felis daemon proposed by Konstantin Alekseevich Satunin in 1904 was a black cat from the Transcaucasus, later identified as a domestic cat.[35][36]
+
+In 2003, the International Commission on Zoological Nomenclature ruled that the domestic cat is a distinct species, namely Felis catus.[37][38] In 2007, it was considered a subspecies, F. silvestris catus, of the European wildcat (F. silvestris) following results of phylogenetic research.[39][40] In 2017, the IUCN Cat Classification Taskforce followed the recommendation of the ICZN in regarding the domestic cat as a distinct species, Felis catus.
+    </p>
 
 
 
