--- a/assignments/assignment3.html
+++ b/assignments/assignment3.html
@@ -28,7 +28,7 @@ The cat is similar in anatomy to the other felid species: it has a strong flexib
     <hr></hr>
 
     <ol>
-        <li> <a href=#Etymology,> Naming, & Taxonomy </a></li>
+        <li> <a id="Etymology, Naming, & Taxonomy" > Etymology, Naming, & Taxonomy </a></li>
         <li> Evolution </li>
         <li> Characteristics </li>
         <li> Senses </li>
