--- a/assignments/assignment3.html
+++ b/assignments/assignment3.html
@@ -28,13 +28,15 @@ The cat is similar in anatomy to the other felid species: it has a strong flexib
     <hr></hr>
 
     <ol>
-        <li> <a id="Etymology, Naming, & Taxonomy" > Etymology, Naming, & Taxonomy </a></li>
+        <li> <a href= #etymology_naming_taxonomy >Etymology, Naming, & Taxonomy </a></li>
         <li> Evolution </li>
         <li> Characteristics </li>
         <li> Senses </li>
     </ol>
 
-    <h2>Etymology, Naming, & Taxonomy</h2>
+    
+
+    <h2><a id=etymology_naming_taxonomy> Etymology, Naming, & Taxonomy</h2>
     <hr></hr>
 
     <p>
