--- a/assignments/assignment3.html
+++ b/assignments/assignment3.html
@@ -53,8 +53,22 @@ In 2003, the International Commission on Zoological Nomenclature ruled that the 
     </p>
 
 
+    <h2><a id=evolution> Evolution </h2>
+    <hr></hr>
 
-    
+    <p>
+        The domestic cat is a member of the Felidae, a family that had a common ancestor about 10–15 million years ago.[42] The genus Felis diverged from other Felidae around 6–7 million years ago.[43] Results of phylogenetic research confirm that the wild Felis species evolved through sympatric or parapatric speciation, whereas the domestic cat evolved through artificial selection.[44] The domesticated cat and its closest wild ancestor are diploid and both possess 38 chromosomes[45] and roughly 20,000 genes.[46] The leopard cat (Prionailurus bengalensis) was tamed independently in China around 5500 BC. This line of partially domesticated cats leaves no trace in the domestic cat populations of today.[47] 
+    </p>
+    <h3> Domestication </h3>
+    <p>
+        The earliest known indication for the taming of an African wildcat (F. lybica) was excavated close by a human Neolithic grave in Shillourokambos, southern Cyprus, dating to about 7500–7200 BC. Since there is no evidence of native mammalian fauna on Cyprus, the inhabitants of this Neolithic village most likely brought the cat and other wild mammals to the island from the Middle Eastern mainland.[48] Scientists therefore assume that African wildcats were attracted to early human settlements in the Fertile Crescent by rodents, in particular the house mouse (Mus musculus), and were tamed by Neolithic farmers. This mutual relationship between early farmers and tamed cats lasted thousands of years. As agricultural practices spread, so did tame and domesticated cats.[13][6] Wildcats of Egypt contributed to the maternal gene pool of the domestic cat at a later time.[49]
+
+The earliest known evidence for the occurrence of the domestic cat in Greece dates to around 1200 BC. Greek, Phoenician, Carthaginian and Etruscan traders introduced domestic cats to southern Europe.[50] During the Roman Empire they were introduced to Corsica and Sardinia before the beginning of the 1st millennium.[51] By the 5th century BC, they were familiar animals around settlements in Magna Graecia and Etruria.[52] By the end of the Western Roman Empire in the 5th century, the Egyptian domestic cat lineage had arrived in a Baltic Sea port in northern Germany.[49]
+
+During domestication, cats have undergone only minor changes in anatomy and behavior, and they are still capable of surviving in the wild. Several natural behaviors and characteristics of wildcats may have pre-adapted them for domestication as pets. These traits include their small size, social nature, obvious body language, love of play and relatively high intelligence. Captive Leopardus cats may also display affectionate behavior toward humans but were not domesticated.[53] House cats often mate with feral cats,[54] producing hybrids such as the Kellas cat in Scotland.[55] Hybridisation between domestic and other Felinae species is also possible.[56]
+
+Development of cat breeds started in the mid 19th century.[57] An analysis of the domestic cat genome revealed that the ancestral wildcat genome was significantly altered in the process of domestication, as specific mutations were selected to develop cat breeds.[58] Most breeds are founded on random-bred domestic cats. Genetic diversity of these breeds varies between regions, and is lowest in purebred populations, which show more than 20 deleterious genetic disorders.
+    </p>
 
 
 </body>
