--- a/assignments/assignment3.html
+++ b/assignments/assignment3.html
@@ -29,7 +29,7 @@ The cat is similar in anatomy to the other felid species: it has a strong flexib
 
     <ol>
         <li> <a href= #etymology_naming_taxonomy >Etymology, Naming, & Taxonomy </a></li>
-        <li> Evolution </li>
+        <li> <a href= #evolution> Evolution </li>
         <li> Characteristics </li>
         <li> Senses </li>
     </ol>
