--- a/assignments/assignment3.html
+++ b/assignments/assignment3.html
@@ -14,8 +14,6 @@
 
     <hr></hr>
 
-    <h2> From Anel Villalobos </h2>
-
     <img src="../img/cat1.jpeg" width="613" height="410">
 
     <p>
@@ -32,6 +30,7 @@ The cat is similar in anatomy to the other felid species: it has a strong flexib
         <li> <a href= #evolution> Evolution </a></li>
         <li> <a href= #characteristics> Characteristics </a></li>
         <li> <a href= #senses> Senses </a></li>
+        <li> <a href = #see_also> See Also </a></li>
     </ol>
 
     
@@ -59,6 +58,9 @@ In 2003, the International Commission on Zoological Nomenclature ruled that the 
     <p>
         The domestic cat is a member of the Felidae, a family that had a common ancestor about 10–15 million years ago.[42] The genus Felis diverged from other Felidae around 6–7 million years ago.[43] Results of phylogenetic research confirm that the wild Felis species evolved through sympatric or parapatric speciation, whereas the domestic cat evolved through artificial selection.[44] The domesticated cat and its closest wild ancestor are diploid and both possess 38 chromosomes[45] and roughly 20,000 genes.[46] The leopard cat (Prionailurus bengalensis) was tamed independently in China around 5500 BC. This line of partially domesticated cats leaves no trace in the domestic cat populations of today.[47] 
     </p>
+
+    <img src="../img/cat2.jpeg" width="550" height="305">
+
     <h3> Domestication </h3>
     <p>
         The earliest known indication for the taming of an African wildcat (F. lybica) was excavated close by a human Neolithic grave in Shillourokambos, southern Cyprus, dating to about 7500–7200 BC. Since there is no evidence of native mammalian fauna on Cyprus, the inhabitants of this Neolithic village most likely brought the cat and other wild mammals to the island from the Middle Eastern mainland.[48] Scientists therefore assume that African wildcats were attracted to early human settlements in the Fertile Crescent by rodents, in particular the house mouse (Mus musculus), and were tamed by Neolithic farmers. This mutual relationship between early farmers and tamed cats lasted thousands of years. As agricultural practices spread, so did tame and domesticated cats.[13][6] Wildcats of Egypt contributed to the maternal gene pool of the domestic cat at a later time.[49]
@@ -73,44 +75,57 @@ Development of cat breeds started in the mid 19th century.[57] An analysis of th
 <h2> <a id=characteristics> Characteristics </h2>
     <hr></hr>
 
-    <h3> Size </h3>
+    <img src="../img/cat3.jpeg" width="530" height="350">
+
+    <h4> Size </h4>
     <p> The domestic cat has a smaller skull and shorter bones than the European wildcat.[60] It averages about 46 cm (18 in) in head-to-body length and 23–25 cm (9–10 in) in height, with about 30 cm (12 in) long tails. Males are larger than females.[61] Adult domestic cats typically weigh between 4 and 5 kg (9 and 11 lb). </p>
 
-    <h3> Skeleton </h3>
+    <h4> Skeleton </h4>
     <p> Cats have seven cervical vertebrae (as do most mammals); 13 thoracic vertebrae (humans have 12); seven lumbar vertebrae (humans have five); three sacral vertebrae (as do most mammals, but humans have five); and a variable number of caudal vertebrae in the tail (humans have only three to five vestigial caudal vertebrae, fused into an internal coccyx).[62]: 11  The extra lumbar and thoracic vertebrae account for the cat's spinal mobility and flexibility. Attached to the spine are 13 ribs, the shoulder, and the pelvis.[62]: 16  Unlike human arms, cat forelimbs are attached to the shoulder by free-floating clavicle bones which allow them to pass their body through any space into which they can fit their head. </p>
 
-    <h3> Skull </h3>
+    <h4> Skull </h4>
     <p> The cat skull is unusual among mammals in having very large eye sockets and a powerful specialized jaw.[64]: 35  Within the jaw, cats have teeth adapted for killing prey and tearing meat. When it overpowers its prey, a cat delivers a lethal neck bite with its two long canine teeth, inserting them between two of the prey's vertebrae and severing its spinal cord, causing irreversible paralysis and death.[65] Compared to other felines, domestic cats have narrowly spaced canine teeth relative to the size of their jaw, which is an adaptation to their preferred prey of small rodents, which have small vertebrae.[65] The premolar and first molar together compose the carnassial pair on each side of the mouth, which efficiently shears meat into small pieces, like a pair of scissors. These are vital in feeding, since cats' small molars cannot chew food effectively, and cats are largely incapable of mastication.[64]: 37  Although cats tend to have better teeth than most humans, with decay generally less likely because of a thicker protective layer of enamel, a less damaging saliva, less retention of food particles between teeth, and a diet mostly devoid of sugar, they are nonetheless subject to occasional tooth loss and infection. </p>
 
-    <h3> Claws </h3>
+    <h4> Claws </h4>
     <p>Cats have protractible and retractable claws.[67] In their normal, relaxed position, the claws are sheathed with the skin and fur around the paw's toe pads. This keeps the claws sharp by preventing wear from contact with the ground and allows for the silent stalking of prey. The claws on the forefeet are typically sharper than those on the hindfeet.[68] Cats can voluntarily extend their claws on one or more paws. They may extend their claws in hunting or self-defense, climbing, kneading, or for extra traction on soft surfaces. Cats shed the outside layer of their claw sheaths when scratching rough surfaces.[69]
 
         Most cats have five claws on their front paws and four on their rear paws. The dewclaw is proximal to the other claws. More proximally is a protrusion which appears to be a sixth "finger". This special feature of the front paws on the inside of the wrists has no function in normal walking but is thought to be an antiskidding device used while jumping. Some cat breeds are prone to having extra digits ("polydactyly").[70] Polydactylous cats occur along North America's northeast coast and in Great Britain.</p>
 
-    <h3>Balance</h3>
+    <h4>Balance</h4>
     <p>Most breeds of cat are noted fond of sitting in high places, or perching. A higher place may serve as a concealed site from which to hunt; domestic cats strike prey by pouncing from a perch such as a tree branch. Another possible explanation is that height gives the cat a better observation point, allowing it to survey its territory. A cat falling from heights of up to 3 meters (9.8 ft) can right itself and land on its paws.[74]
 
         During a fall from a high place, a cat reflexively twists its body and rights itself to land on its feet using its acute sense of balance and flexibility. This reflex is known as the cat righting reflex.[75] A cat always rights itself in the same way during a fall, if it has enough time to do so, which is the case in falls of 90 cm (2 ft 11 in) or more.[76] How cats are able to right themselves when falling has been investigated as the "falling cat problem".</p>
 
 <h2> <a id=senses> Senses </h2>
     <hr></hr>
-    <h3> Vision</h3>
+
+    <img src="../img/cat4.jpeg" width="510" height="390">
+
+    <h4> Vision</h4>
     <p>Cats have excellent night vision and can see at only one-sixth the light level required for human vision.[64]: 43  This is partly the result of cat eyes having a tapetum lucidum, which reflects any light that passes through the retina back into the eye, thereby increasing the eye's sensitivity to dim light.[77] Large pupils are an adaptation to dim light. The domestic cat has slit pupils, which allow it to focus bright light without chromatic aberration.[78] At low light, a cat's pupils expand to cover most of the exposed surface of its eyes.[79] The domestic cat has rather poor color vision and only two types of cone cells, optimized for sensitivity to blue and yellowish green; its ability to distinguish between red and green is limited.[80] A response to middle wavelengths from a system other than the rod cells might be due to a third type of cone. This appears to be an adaptation to low light levels rather than representing true trichromatic vision.</p>
 
-    <h3>Hearing</h3>
+    <h4>Hearing</h4>
     <p>The domestic cat's hearing is most acute in the range of 500 Hz to 32 kHz.[82] It can detect an extremely broad range of frequencies ranging from 55 Hz to 79,000 Hz. It can hear a range of 10.5 octaves, while humans and dogs can hear ranges of about 9 octaves.[83][84] Its hearing sensitivity is enhanced by its large movable outer ears, the pinnae, which amplify sounds and help detect the location of a noise. It can detect ultrasound, which enables it to detect ultrasonic calls made by rodent prey.[85][86] Recent research has shown that cats have socio-spatial cognitive abilities to create mental maps of owners' locations based on hearing owners' voices.</p>
 
-    <h3>Smell</h3>
+    <h4>Smell</h4>
     <p>Cats have an acute sense of smell, due in part to their well-developed olfactory bulb and a large surface of olfactory mucosa, about 5.8 square centimetres (29⁄32 square inch) in area, which is about twice that of humans.[88] Cats and many other animals have a Jacobson's organ in their mouths that is used in the behavioral process of flehmening. It allows them to sense certain aromas in a way that humans cannot. Cats are sensitive to pheromones such as 3-mercapto-3-methylbutan-1-ol,[89] which they use to communicate through urine spraying and marking with scent glands.[90] Many cats also respond strongly to plants that contain nepetalactone, especially catnip, as they can detect that substance at less than one part per billion.[91] About 70–80% of cats are affected by nepetalactone.[92] This response is also produced by other plants, such as silver vine (Actinidia polygama) and the herb valerian; it may be caused by the smell of these plants mimicking a pheromone and stimulating cats' social or sexual behaviors.</p>
 
-    <h3>Taste</h3>
+    <h4>Taste</h4>
     <p>Cats have relatively few taste buds compared to humans (470 or so versus more than 9,000 on the human tongue).[94] Domestic and wild cats share a taste receptor gene mutation that keeps their sweet taste buds from binding to sugary molecules, leaving them with no ability to taste sweetness.[citation needed] Their taste buds instead respond to acids, amino acids like protein, and bitter tastes.[95] Cats also have a distinct temperature preference for their food, preferring food with a temperature around 38 °C (100 °F) which is similar to that of a fresh kill and routinely rejecting food presented cold or refrigerated (which would signal to the cat that the "prey" item is long dead and therefore possibly toxic or decomposing).</p>
 
-    <h3>Whiskers</h3>
+    <h4>Whiskers</h4>
     <p>To aid with navigation and sensation, cats have dozens of movable whiskers (vibrissae) over their body, especially their faces. These provide information on the width of gaps and on the location of objects in the dark, both by touching objects directly and by sensing air currents; they also trigger protective blink reflexes to protect the eyes from damage.</p>
 
+<h2><a id=see_also> See Also </a></h2>
+    <hr></hr>
 
+   <p> <a href="https://en.wikipedia.org/wiki/Cat_lady"> Cat Lady </a> </p>
+   <p> <a href="https://www.nationalgeographic.com/animals/mammals/facts/domestic-cat"> National Geographic: Cats</a></p>
+   <p> <a href="https://qutr3093.github.io/assignments/assignment3.html"> Zendaya </a> by Q </p>
+   <p> <a href="https://ahal3986.github.io/Assignment3/Assignment3.html"> Queen Elizabeth</a> by Azri </p>
 
-    
+   <hr></hr>
+   <h3> Source: <a href="https://en.wikipedia.org/wiki/Cat"> Cat Wikipedia </a></h3>
+
 </body>
 </html>
