--- a/ica4/part1/bibliography.html
+++ b/ica4/part1/bibliography.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Formatting a biography</title>
-    <link rel="stylesheet" href="jane.css" >
+    <link rel="stylesheet" href="bibliography.css" >
   </head>
 
   <body>
