--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anel's Site</title>
+    <link rel="stylesheet" href="styles.css" >
 </head>
 <body>
     <h1 style="font-family:Helvetica;">Hello I am Anel and this is my Site</h1>
@@ -14,8 +15,8 @@
         for others. </p>
     <sub style="font-family:Helvetica;">I also hope to learn how to make a nicer looking website to use as a portfolio through this course</sub>
     
-    <img src="/img/me.jpeg" width="378" height="504">
+    <img src="/img/headshot.jpg" width="481" height="604">
 
-    <h4 style="font-family:Copperplate;"> My favorite video at the moment:</h4> <a href= https://www.youtube.com/watch?v=xuCn8ux2gbs&t=70s>all you need to know</a> 
+    <h4 style="font-family:Roboto;"> My favorite video at the moment:</h4> <a href= https://www.youtube.com/watch?v=xuCn8ux2gbs&t=70s>all you need to know</a> 
 </body>
 </html>
