--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anel's Site</title>
-    <link rel="stylesheet" href="styles.css" >
+    <link rel="stylesheet" href="/css/styles.css" >
 </head>
 <body>
-    <h1 style="font-family:Helvetica;">Hello I am Anel and this is my Site</h1>
+    <h1 style="font-family:sans-serif;">Hello I am Anel and this is my Site</h1>
     <h3 style="font-family:Helvetica;">pronouns: she/her</h3> 
     <p style="font-family:Helvetica;">I am in my fourth year at CU Boulder studying Media Production and double minoring in CTD and Leadership Studies.
             Documentary media is where my heart lies, I hope to share people's stories and provide new perspectives of life 
