--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anel's Site</title>
-    <link rel="stylesheet" href="/css/styles.css" >
+    <link rel="stylesheet" href="css/styless.css" >
 </head>
 <body>
     <h1 style="font-family:sans-serif;">Hello I am Anel and this is my Site</h1>
