--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Anel's Site</title>
     <link rel="stylesheet" href="css/styless.css" >
 </head>
-<body>
+
+
+<body> 
+    <div class="about-me-1 roboto-bold-black-75px"> About Me </div>
+
+    <h2> About Me </h2>
+
     <h1 style="font-family:sans-serif;">Hello I am Anel and this is my Site</h1>
     <h3 style="font-family:Helvetica;">pronouns: she/her</h3> 
     <p style="font-family:Helvetica;">I am in my fourth year at CU Boulder studying Media Production and double minoring in CTD and Leadership Studies.
