--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
 <body> 
 
-    <h1 style="font-family:sans-serif;">Hello I am Anel and this is my Site</h1>
-    <h3 style="font-family:Helvetica;">pronouns: she/her</h3> 
-    <p style="font-family:Helvetica;">I am in my fourth year at CU Boulder studying Media Production and double minoring in CTD and Leadership Studies.
+    <h1>Hello I'm Anel</h1>
+    <h2>Welcome to my Site</h2>
+    <h3>pronouns: she/her</h3> 
+    <p>I am in my fourth year at CU Boulder studying Media Production and double minoring in CTD and Leadership Studies.
             Documentary media is where my heart lies, I hope to share people's stories and provide new perspectives of life 
         for others. </p>
     <sub style="font-family:Helvetica;">I also hope to learn how to make a nicer looking website to use as a portfolio through this course</sub>
