--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         for others. </p>
     <sub style="font-family:Helvetica;">I also hope to learn how to make a nicer looking website to use as a portfolio through this course</sub>
     
-    <img src="/img/headshot.jpg" width="400" height="590">
+    <a href="/img/headshot.jpg" class="image"> My headshot</a>
 
-    <h4 style="font-family:Roboto;"> My favorite video at the moment:</h4> <a href= https://www.youtube.com/watch?v=xuCn8ux2gbs&t=70s>all you need to know</a> 
+
+    <h4> My favorite video at the moment:</h4> <a href= https://www.youtube.com/watch?v=xuCn8ux2gbs&t=70s class="button1">all you need to know</a> 
 </body>
 </html>
