--- a/index.html
+++ b/index.html
@@ -17,11 +17,23 @@
     <p>I am in my fourth year at CU Boulder studying Media Production and double minoring in CTD and Leadership Studies.
             Documentary media is where my heart lies, I hope to share people's stories and provide new perspectives of life 
         for others. </p>
-    <sub style="font-family:Helvetica;">I also hope to learn how to make a nicer looking website to use as a portfolio through this course</sub>
+    <p>I also hope to learn how to make a nicer looking website to use as a portfolio through this course</p>
     
-    <a href="/img/headshot.jpg" class="image"> My headshot</a>
+    <img src="/img/headshot.jpg" width="400" height="590" alt="My headshot">
 
+    <h5>I hope to create art and fulfill these desires through media:</h5>
+    <ol>  
+        <li>Provide new perspectives </li>
+        <li>Serve as representation for underrepresented people and ideas in media </li>
+        <li>Making a meaningful contributtion to society </li>
+    </ol>
 
-    <h4> My favorite video at the moment:</h4> <a href= https://www.youtube.com/watch?v=xuCn8ux2gbs&t=70s class="button1">all you need to know</a> 
+    <h5> These are two programs I work with that motivate my advocacy in my media projects: </h5>
+    <ul>
+        <li> <a href="https://www.colorado.edu/precollege/precollegiate-development-program" class="job1"> Pre Collegiate Development Program</a> </li>
+        <li> <a href="https://www.colorado.edu/lsm/minor-pathways-electives/multicultural-leadership-scholars-pathway" class="job1"> Multicultural Leadership Scholars</a> </li>
+    </ul>
+
+    <h4> My favorite videos at the moment:</h4> <a href= https://www.youtube.com/watch?v=xuCn8ux2gbs&t=70s class="button1">Video 1</a> <a href= https://www.youtube.com/watch?v=cw9FIeHbdB8 class="button1">Video 2</a> 
 </body>
 </html>
