--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h3>pronouns: she/her</h3> 
     <p>I am in my fourth year at CU Boulder studying Media Production and double minoring in CTD and Leadership Studies.
             Documentary media is where my heart lies, I hope to share people's stories and provide new perspectives of life 
-        for others. </p>
+        for others to allow others to better understand different experiences. </p>
     <p>I also hope to learn how to make a nicer looking website to use as a portfolio through this course</p>
     
     <img src="/img/headshot.jpg" width="400" height="590" alt="My headshot">
