--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
         <li> <a href="https://www.colorado.edu/lsm/minor-pathways-electives/multicultural-leadership-scholars-pathway" class="job1"> Multicultural Leadership Scholars</a> </li>
     </ul>
 
-    <h4> My favorite videos at the moment:</h4> <a href= https://www.youtube.com/watch?vxuCn8ux2gbs&t70s class="button1">Video 1</a> <a href= https://www.youtube.com/watch?vcw9FIeHbdB8 class="button1">Video 2</a> 
+    <h4> My favorite videos at the moment:</h4> <a href= "https://www.youtube.com/watch?v=cw9FIeHbdB8" class="button1">Video 1</a> <a href= "https://www.youtube.com/watch?v=xuCn8ux2gbs&t=70s" class="button1">Video 2</a> 
 </body>
 </html>
