image float left

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p>I also hope to learn how to make a nicer looking website to use as a portfolio through this course</p>
     
 <main class="grid">
-    <img src="/img/headshot.jpg" width="400" height="590" alt="My headshot">
+    <img src="/img/headshot.jpg" width="400" height="590" alt="My headshot" class="feature">
     
     <aside>
         <h5>I love to create art and hope to fulfill these goals through my media projects:</h5>
