--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
         for others to allow others to better understand different experiences. </p>
     <p>I also hope to learn how to make a nicer looking website to use as a portfolio through this course</p>
     
-<main class="grid">
-    <img src="/img/headshot.jpg" width="400" height="590" alt="My headshot" class="feature">
-    
-    <aside>
+<div class="grid-container">
+    <div class="grid-item">
+        <img src="/img/headshot.jpg" width="400" height="590" alt="My headshot" >
+    </div>
+
+    <div class="grid-item">
         <h5>I love to create art and hope to fulfill these goals through my media projects:</h5>
         <ol>  
             <li>Provide new perspectives </li>
@@ -37,8 +39,8 @@
             <li> <a href="https://www.colorado.edu/precollege/precollegiate-development-program" class="job1"> Pre Collegiate Development Program</a> </li>
             <li> <a href="https://www.colorado.edu/lsm/minor-pathways-electives/multicultural-leadership-scholars-pathway" class="job1"> Multicultural Leadership Scholars</a> </li>
         </ul>
-    </aside>
-</main>
+    </div>
+</div>
 
     <h4> My favorite videos at the moment:</h4> <a href= "https://www.youtube.com/watch?v=cw9FIeHbdB8" class="button1">Video 1</a> <a href= "https://www.youtube.com/watch?v=xuCn8ux2gbs&t=70s" class="button1">Video 2</a> 
 </body>
