--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             <li>Serve as representation for underrepresented people and ideas in media </li>
             <li>Making a meaningful contributtion to society </li>
         </ol>
+    </div>
 
+    <div class="grid-item">
         <h5> These are two programs I work with that motivate my advocacy in my creative pursuits: </h5>
         <ul>
             <li> <a href="https://www.colorado.edu/precollege/precollegiate-development-program" class="job1"> Pre Collegiate Development Program</a> </li>
