--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
 <div class="grid-container">
     <div class="grid-item">
-        <img src="/img/headshot.jpg" width="400" height="590" alt="My headshot" >
+        <img src="/img/headshot.jpg" width="400" height="590" alt="My headshot" class="responsive" >
     </div>
 
     <div class="grid-item">
