--- a/index.html
+++ b/index.html
@@ -26,21 +26,23 @@
         <img src="/img/headshot.jpg" width="400" height="590" alt="My headshot" class="responsive" >
     </div>
 
-    <div class="grid-item">
-        <h5>I love to create art and hope to fulfill these goals through my media projects:</h5>
-        <ol>  
-            <li>Provide new perspectives </li>
-            <li>Serve as representation for underrepresented people and ideas in media </li>
-            <li>Making a meaningful contributtion to society </li>
-        </ol>
-    </div>
+    <div class="container_2">
+        <div class="grid-item">
+            <h5>I love to create art and hope to fulfill these goals through my media projects:</h5>
+            <ol>  
+                <li>Provide new perspectives </li>
+                <li>Serve as representation for underrepresented people and ideas in media </li>
+                <li>Making a meaningful contributtion to society </li>
+            </ol>
+        </div>
 
-    <div class="grid-item">
-        <h5> These are two programs I work with that motivate my advocacy in my creative pursuits: </h5>
-        <ul>
-            <li> <a href="https://www.colorado.edu/precollege/precollegiate-development-program" class="job1"> Pre Collegiate Development Program</a> </li>
-            <li> <a href="https://www.colorado.edu/lsm/minor-pathways-electives/multicultural-leadership-scholars-pathway" class="job1"> Multicultural Leadership Scholars</a> </li>
-        </ul>
+        <div class="grid-item">
+            <h5> These are two programs I work with that motivate my advocacy in my creative pursuits: </h5>
+            <ul>
+                <li> <a href="https://www.colorado.edu/precollege/precollegiate-development-program" class="job1"> Pre Collegiate Development Program</a> </li>
+                <li> <a href="https://www.colorado.edu/lsm/minor-pathways-electives/multicultural-leadership-scholars-pathway" class="job1"> Multicultural Leadership Scholars</a> </li>
+            </ul>
+        </div>
     </div>
 </div>
 
