--- a/index.html
+++ b/index.html
@@ -8,9 +8,25 @@
     <link rel="stylesheet" href="css/styless.css" >
 </head>
 
+<body>
 
-<body> 
-
+    <nav>
+        <ul>
+          <li>
+            <a href="">Home</a>
+          </li>
+          <li>
+            <a href="">Projects</a>
+          </li>
+          <li>
+            <a href="">Work in Progress</a>
+          </li>
+          <li>
+            <a href="">About</a>
+          </li>
+        </ul>
+      </nav>
+    
     <h1>Hello I'm Anel</h1>
     <h2>Welcome to my Site</h2>
     <h3>pronouns: she/her</h3> 
@@ -21,31 +37,32 @@
         for others to allow others to better understand different experiences. </p>
     <p>I also hope to learn how to make a nicer looking website to use as a portfolio through this course</p>
     
-<div class="grid-container">
-    <div class="grid-item">
-        <img src="/img/headshot.jpg" width="400" height="590" alt="My headshot" class="responsive" >
-    </div>
-
-    <div class="container_2">
+    <div class="grid-container">
         <div class="grid-item">
-            <h5>I love to create art and hope to fulfill these goals through my media projects:</h5>
-            <ol>  
-                <li>Provide new perspectives </li>
-                <li>Serve as representation for underrepresented people and ideas in media </li>
-                <li>Making a meaningful contributtion to society </li>
-            </ol>
-        </div> 
+            <img src="/img/headshot.jpg" width="400" height="590" alt="My headshot" class="responsive" >
+        </div>
 
-        <div class="grid-item">
-            <h5> These are two programs I work with that motivate my advocacy in my creative pursuits: </h5>
-            <ul>
-                <li> <a href="https://www.colorado.edu/precollege/precollegiate-development-program" class="job1"> Pre Collegiate Development Program</a> </li>
-                <li> <a href="https://www.colorado.edu/lsm/minor-pathways-electives/multicultural-leadership-scholars-pathway" class="job1"> Multicultural Leadership Scholars</a> </li>
-            </ul>
+        <div class="container_2">
+            <div class="grid-item">
+                <h5>I love to create art and hope to fulfill these goals through my media projects:</h5>
+                <ol>  
+                    <li>Provide new perspectives </li>
+                    <li>Serve as representation for underrepresented people and ideas in media </li>
+                    <li>Making a meaningful contributtion to society </li>
+                </ol>
+            </div> 
+
+            <div class="grid-item">
+                <h5> These are two programs I work with that motivate my advocacy in my creative pursuits: </h5>
+                <ul>
+                    <li> <a href="https://www.colorado.edu/precollege/precollegiate-development-program" class="job1"> Pre Collegiate Development Program</a> </li>
+                    <li> <a href="https://www.colorado.edu/lsm/minor-pathways-electives/multicultural-leadership-scholars-pathway" class="job1"> Multicultural Leadership Scholars</a> </li>
+                </ul>
+            </div>
         </div>
     </div>
-</div>
 
+    <hr>
     <h4> My favorite videos at the moment:</h4> <a href= "https://www.youtube.com/watch?v=cw9FIeHbdB8" class="button1">Video 1</a> <a href= "https://www.youtube.com/watch?v=xuCn8ux2gbs&t=70s" class="button1">Video 2</a> 
 </body>
 </html>
