--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
         </div>
 
         <hr>
+        <div class="bottom">
         <h4> My favorite videos at the moment:</h4> <a href= "https://www.youtube.com/watch?v=cw9FIeHbdB8" class="button1">Video 1</a> <a href= "https://www.youtube.com/watch?v=xuCn8ux2gbs&t=70s" class="button1">Video 2</a> 
+        </div>
     </main>
 </body>
 </html>
