--- a/page2.html
+++ b/page2.html
@@ -9,6 +9,23 @@
 </head>
 <body>
 
+    <nav>
+        <ul>
+          <li>
+            <a href="">Home</a>
+          </li>
+          <li>
+            <a href="">Projects</a>
+          </li>
+          <li>
+            <a href="">Work in Progress</a>
+          </li>
+          <li>
+            <a href="">About</a>
+          </li>
+        </ul>
+      </nav>
+      
     <h1> Projects <h1>
     <h3> short documentary <h3>
     
