--- a/index.html
+++ b/index.html
@@ -10,24 +10,23 @@
 
 <body>
 
-    <h2 class="logo">Hello I'm Anel</h2>
-
     <nav>
-        <ul>
-          <li>
-            <a href="">Home</a>
-          </li>
-          <li>
-            <a href="">Projects</a>
-          </li>
-          <li>
-            <a href="">Work in Progress</a>
-          </li>
-          <li>
-            <a href="">About</a>
-          </li>
-        </ul>
-      </nav>
+      <label class="logo">L</label>
+      <ul>
+        <li>
+          <a href="index.html">Home</a>
+        </li>
+        <li>
+          <a href="page2.html">Projects</a>
+        </li>
+        <li>
+          <a href="page3.html">Work in Progress</a>
+        </li>
+        <li>
+          <a href="page4.html">About</a>
+        </li>
+      </ul>
+    </nav>
     
 
     <main class="grid">
