thin to lighter/ confined to pcdp trailer
to show vikki

--- a/page2.html
+++ b/page2.html
@@ -37,7 +37,7 @@
         <div class="grid-container">
             <div class="grid-item">
                 <video controls>
-                    <source src="./img/videos/condfined.mp4" type="video/mp4" class="responsive">
+                    <source src="./img/videos/pcdp_trailer.mp4" type="video/mp4" class="responsive">
                 </video>   
                 <p>USE THIS SECTION AS A SUMMARY OF THE VIDEO. I am in my fourth year at CU Boulder studying Media Production and double minoring in CTD and Leadership Studies.
                     Documentary media is where my heart lies, I hope to share people's stories and provide new perspectives of life 
@@ -52,7 +52,7 @@
                     <p> can & should probably explain in multiple paragraphs </p>
                 </div> 
             </div>
-            
+
             <h4 class="title">Community of the Pre-Collegiate Development Program Trailer (2021)</h4>        
         <div class="grid-container">
             <div class="grid-item">
