up to date after recitation
CSS
- html margin 0 didnt do anything?
- z-index removed video player from hovering over nav bar
- border-radius to all red borders
- #about was updated

html
- removed about section from the "container-2" div to make it line up next to video player

--- a/page2.html
+++ b/page2.html
@@ -33,7 +33,9 @@
         <h3>Short Documentary Media & Videos</h3> 
         <hr>
 
-        <h4 class="title">Confined (2021)</h4>        
+        <h4 class="title">Confined (2021)</h4>  
+        
+        
         <div class="grid-container">
             <div class="grid-item">
                 <video controls>
@@ -43,15 +45,12 @@
                     Documentary media is where my heart lies, I hope to share people's stories and provide new perspectives of life 
                 for others to allow others to better understand different experiences. </p>
             </div>
-        </div>        
-
-            <div class="container_2">
-                <div class="grid-item">
+            <div class="grid-item" id="about">
                     <h6>About the process</h6>
                     <p> I will use this section to talk about the meaning of the video and what it was like to create it. Explain my experience in documentary media at the time, what kind of equipment i used, what challenges i faced, and what I learned. </p>
                     <p> can & should probably explain in multiple paragraphs </p>
-                </div> 
             </div>
+        </div>        
 
             <h4 class="title">Community of the Pre-Collegiate Development Program Trailer (2021)</h4>        
         <div class="grid-container">
