content on all pages
- added audio files and images for audio projects

- media query for pg 3

- about page updated

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a href="page2.html">Projects</a>
         </li>
         <li>
-          <a href="page3.html">Work in Progress</a>
+          <a href="page3.html">Transitional Work</a>
         </li>
         <li>
           <a href="page4.html">About</a>
