--- a/page2.html
+++ b/page2.html
@@ -19,7 +19,7 @@
           <a href="page2.html">Projects</a>
         </li>
         <li>
-          <a href="page3.html">Work in Progress</a>
+          <a href="page3.html">Transitional Work</a>
         </li>
         <li>
           <a href="page4.html">About</a>
@@ -37,7 +37,7 @@
         <div class="grid-container">
             <div class="grid-item">
                 <video controls>
-                    <source src="./img/videos/Confined (engagedshort).mp4" type="video/mp4" class="responsive">
+                    <source src="./img/videos/pcdp_trailer.mp4" type="video/mp4" class="responsive">
                 </video>   
                 <p>USE THIS SECTION AS A SUMMARY OF THE VIDEO. I am in my fourth year at CU Boulder studying Media Production and double minoring in CTD and Leadership Studies.
                     Documentary media is where my heart lies, I hope to share people's stories and provide new perspectives of life 
