--- a/page3.html
+++ b/page3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Work in Progress</title>
+    <title>Transitional Work</title>
     <link rel="stylesheet" href="css/styless.css" >
 </head>
 <body>
@@ -19,13 +19,54 @@
           <a href="page2.html">Projects</a>
         </li>
         <li>
-          <a href="page3.html">Work in Progress</a>
+          <a href="page3.html">Transitional Work</a>
         </li>
         <li>
           <a href="page4.html">About</a>
         </li>
       </ul>
     </nav>
+
+    <main class="grid">
+      <h1>Transitional Work</h1>
+      <h3>Multimedia Projects</h3> 
+      <hr>
+
+      <h4>Audio</h4> 
+      <div class="container_3">
+          <div class="grid-item">
+            <p>Explain my understranding of the significance of audio in filmmaking as well as the variety of approaaches I take to record or aquire sounds. Explain my understranding of the significance of audio in filmmaking as well as the variety of approaaches I take to record or aquire sounds. <p> 
+            <p>USE THIS SECTION AS A SUMMARY OF THE VIDEO. I am in my fourth year at CU Boulder studying Media Production and double minoring in CTD and Leadership Studies.
+                  Documentary media is where my heart lies, I hope to share people's stories and provide new perspectives of life 
+              for others to allow others to better understand different experiences. </p>
+          </div>
+          <div class="audio_container">
+                  <h6>Acoustic Radio Interference</h6>
+                  <img src="/img/wav.png" width="360" height="190" alt="project wav" class="responsive" >
+                    <audio controls>
+                      <source src="./audio/Villalobos_SoundFinal.mp3" type="audio/mpeg">
+                      Acoustic Radio Interference 
+                    </audio>
+                  <div class="about_audio">
+                    <p> I will use this section to talk about the meaning of the video and what it was like to create it. Explain my experience in documentary media at the time, what kind of equipment i used, what challenges i faced, and what I learned. </p>
+                  </div>
+          </div>
+
+          <div class="audio_container">
+            <h6>Saturday Night at Union Station</h6>
+            <img src="/img/union.jpeg" width="300" height="220" alt="union station" class="responsive" >
+              <audio controls>
+                  <source src="./audio/UnionStation_mixdown.mp3" type="audio/mpeg">
+                Saturday Night at Union Station 
+              </audio>
+            <div class="about_audio">
+              <p> I will use this section to talk about the meaning of the video and what it was like to create it. Explain my experience in documentary media at the time, what kind of equipment i used, what challenges i faced, and what I learned. </p>
+            </div>
+          </div>
+      </div>
+    </main>
+      
+      <h5 class="resource"> here i will provide a link via url to a resource </h5>
 
 </body>
 </html>
