--- a/page4.html
+++ b/page4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>About</title>
     <link rel="stylesheet" href="css/styless.css" >
 </head>
 <body>
@@ -19,13 +19,30 @@
           <a href="page2.html">Projects</a>
         </li>
         <li>
-          <a href="page3.html">Work in Progress</a>
+          <a href="page3.html">Transitional Work</a>
         </li>
         <li>
           <a href="page4.html">About</a>
         </li>
       </ul>
     </nav>
+
+    <main class="grid">
+      <h1>About</h1>
+      <h3>Website Purpose</h3> 
+      <hr>
+
+      <h4 class="pg4_about">Why did I create this site?</h4> 
+      <p class="pg4_about"> Explain what the page is for here.Explain what the page is for here.Explain what the page is for here. </p>
+
+      <h4 class="pg4_about">Where will I go from here?</h4> 
+      <p class="pg4_about"> Explain what the page is for here. Explain what the page is for here. Explain what the page is for here. </p>
+
+      <div class="container_3">
+      
+      </div>
+      
+    </main>
 
 </body>
 </html>
