photography section added
- imported images

--- a/page3.html
+++ b/page3.html
@@ -42,7 +42,7 @@
           </div>
           <div class="audio_container">
                   <h6>Acoustic Radio Interference</h6>
-                  <img src="/img/wav.png" width="360" height="190" alt="project wav" class="responsive" >
+                  <img src="/img/wav.png" width="360" height="200" alt="project wav" class="responsive" >
                     <audio controls>
                       <source src="./audio/Villalobos_SoundFinal.mp3" type="audio/mpeg">
                       Acoustic Radio Interference 
@@ -54,7 +54,7 @@
 
           <div class="audio_container">
             <h6>Saturday Night at Union Station</h6>
-            <img src="/img/union.jpeg" width="300" height="220" alt="union station" class="responsive" >
+            <img src="/img/union.jpeg" width="300" height="200" alt="union station" class="responsive" >
               <audio controls>
                   <source src="./audio/UnionStation_mixdown.mp3" type="audio/mpeg">
                 Saturday Night at Union Station 
@@ -64,9 +64,40 @@
             </div>
           </div>
       </div>
+
+
+      <h4>Photography & Design</h4> 
+      <p>Explain my understranding of the significance of audio in filmmaking as well as the variety of approaaches I take to record or aquire sounds. Explain my understranding of the significance of audio in filmmaking as well as the variety of approaaches I take to record or aquire sounds. <p> 
+        <p>USE THIS SECTION AS A SUMMARY OF THE VIDEO. I am in my fourth year at CU Boulder studying Media Production and double minoring in CTD and Leadership Studies.
+              Documentary media is where my heart lies, I hope to share people's stories and provide new perspectives of life 
+          for others to allow others to better understand different experiences. </p>
+      <div class="container_4">        
+          <div class="photo_container">
+                  <h6>Companions Photobook</h6>
+                  <img src="/img/cspread1.png" width="550" height="240" alt="spread1" class="responsive" >
+                  <img src="/img/cspread2.png" width="550" height="240" alt="spread1" class="responsive" >
+                  <img src="/img/cspread3.png" width="550" height="240" alt="spread1" class="responsive" >
+                  <img src="/img/cspread4.png" width="550" height="240" alt="spread1" class="responsive" >
+
+                  <div class="about_photo">
+                    <p> I will use this section to talk about the meaning of the video and what it was like to create it. Explain my experience in documentary media at the time, what kind of equipment i used, what challenges i faced, and what I learned. </p>
+                  </div>
+          </div>
+
+          <div class="photo_container">
+            <h6>Reframing Portrait</h6>
+            <img src="/img/spread1.png" width="550" height="240" alt="spread1" class="responsive" >
+            <img src="/img/spread2.jpeg" width="550" height="240" alt="spread1" class="responsive" >
+              
+            <div class="about_photo">
+              <p> I will use this section to talk about the meaning of the video and what it was like to create it. Explain my experience in documentary media at the time, what kind of equipment i used, what challenges i faced, and what I learned. </p>
+            </div>
+          </div>
+      </div>
+
     </main>
       
-      <h5 class="resource"> here i will provide a link via url to a resource </h5>
+  
 
 </body>
 </html>
